# vn-sp

./: .gitignore  README.md  pyproject.toml
app/: config.py  main.py
app/api/: __init__.py  data.py  experiments.py  results.py  viz.py
app/models/: __init__.py  base.py  bilstm.py  dnn.py  gru.py  lstm.py  rnn.py
app/services/: data_service.py  dataset_builder.py  evaluation_service.py  experiment_runner.py  hpo_service.py  preprocessing.py  trading_service.py  training_service.py  viz_service.py  wavelet_service.py
app/utils/: metrics.py  seeds.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  charts.js  main.js
notebooks/: eda.ipynb
notebooks/data/raw/: VCB_raw.csv  VIC_raw.csv
scripts/: download_data.py  preprocess.py  run_experiments.py  run_hpo.py
