[project]
name = "vnsp"
version = "0.1.0"
description = "Vietnam Stock Prediction — replication of Li et al. (2026)"
requires-python = "==3.12.9"
dependencies = [
    # Deep learning — CPU only, no CUDA/MPS
    "torch>=2.2.0",
    # Data
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    # Wavelet decomposition
    "PyWavelets>=1.6.0",
    # ML utilities
    "scikit-learn>=1.5.0",
    # Hyperparameter optimization
    "optuna>=3.6.0",
    # API backend
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Vietnam stock data (v3.x — API mới: Quote(symbol, source).history())
    "vnstock>=3.2.0",
    # Visualization
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",   # FastAPI test client
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]
